--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 
      <body>
          <h1>Lasagna</h1>
-         <img src="../images/lasagna.webp" alt="picture of lasagna" height="310" width="310    ">
+         <img src="../images/lasagna.jpg" alt="picture of lasagna" height="310" width="310">
 
          <h3>Description:</h3>
          <p>Homemade lasagan may have several steps, but each step is easy and 
@@ -31,10 +31,15 @@
          </ul>
          <h3>Steps:</h3>
          <ol>
-             <li>Boil Pasta</li>
-             <li>Prepare meat sauce</li>
-             <li>Combine cheese mixture</li>
-             <li>Layer and bake</li>
+             <li><strong>Boil Pasta</strong> Cook in a large pot of
+             salted water</li>
+             <li><strong>Prepare meat sauce</strong> Cook sausage and 
+             beef with onion and garlic. Drain well, add the pasta sauce
+              and simmer it for a few minutes</li>
+             <li><strong>Combine cheese mixture</strong> Stir the cheese
+             mixture together in a bowl.</li>
+             <li><strong>Layer and bake</strong> Layer the cheese sauce and
+             cheese mixture with noodles and bake until brown and bubbly.</li>
          </ol>
          
          
