--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
      <body>
          <h1>Odin Recipes</h1>
-         <a href="./recipes/lasagna.html" target="blank">Lasagna</a>
-
+         <ul>
+             <li><a href="./recipes/lasagna.html" target="blank">Lasagna</a></li>
+             <li><a href="./recipes/hamburgersoup.html" target="blank">Hamburger Spoup</a></li>
+         </ul>               
 
 
 
