added stylesheets per assaignment

--- a/recipes/hamburgersoup.html
+++ b/recipes/hamburgersoup.html
@@ -4,14 +4,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="hamburgersoup-style.css">
      </head>
 
      <body>
+         <div>
          <h1>Hamburger Soup</h1>
          <img src="../images/hamburgersoup.jpeg" alt="picture of lasagna" height="310" width="310">
 
          <h2>Description:</h2>
-         <p>This Hamburger Soup is classic comfort food, hearty, healthy and
+         <p class="desc">This Hamburger Soup is classic comfort food, hearty, healthy and
          satisfying.</p>
 
          <h3>Ingrediants:</h3>
@@ -33,7 +35,7 @@
              <li>Brown onion, beef and garlic until no pink remains </li>
              <li>Add everything but veggies and simmer covered for 10min</li> 
              <li>Stir in veggies, simmer 15-20min until potatoes are tender</li>
-         
+         </div>
 
      </body>
 </html>
