--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,18 +4,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="lasagna-style.css">
      </head>
 
      <body>
+         <div>
          <h1>Lasagna</h1>
          <img src="../images/lasagna.jpg" alt="picture of lasagna" height="310" width="310">
 
          <h2>Description:</h2>
-         <p>Homemade lasagan may have several steps, but each step is easy and 
-         worth the time in order to make this delicious Italian-American dish.</p>
-
-
-         <p>This is an easy to follow lasagan recipe that will require only one 
+         <p class="desc">Homemade lasagan may have several steps, but each step is easy and 
+         worth the time in order to make this delicious Italian-American dish.<br> This is an easy to follow lasagan recipe that will require only one 
           baking dish, one bowl and a pan! </p>
 
          <h3>Ingrediants:</h3>
@@ -43,7 +42,7 @@
          </ol>
          
          
-
+         </div>
      </body>
 </html>
 
