--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
      </head>
 
      <body>
-         <h1>Odin Recipes</h1>
-         <ul>
-             <li><a href="./recipes/lasagna.html" target="blank">Lasagna</a></li>
-             <li><a href="./recipes/hamburgersoup.html" target="blank">Hamburger Spoup</a></li>
-         </ul>               
+         <div>
+             <h1>Odin Recipes</h1>
+             <ul>
+                 <li><a href="./recipes/lasagna.html" target="blank">Lasagna</a></li>
+                 <li><a href="./recipes/hamburgersoup.html" target="blank">Hamburger Spoup</a></li>
+             </ul>
+         </div>
 
-
-
-
+         <img src="images/kitchen.jpg" alt="picture of kitchen">
      </body>
 </html>
 
